--- a/assets/pages/productos.html
+++ b/assets/pages/productos.html
@@ -59,7 +59,7 @@
         </div>
 
         <div id="gridAreaProductosMainGaleria" class="seccionProductos">
-            <div class="tarjetaProductos tarjetaProductos1 flexMedio">
+            <div class="tarjetaProductos tarjetaProductos1 transicion">
                 <div class="contenidoProductos">
                     <img class="imagenProducto" src="../images/sec/GA025812341.jpg" alt="">
                     <h4>Botines Nike</h4>
@@ -67,7 +67,7 @@
                 </div>
             </div>
         
-            <div class="tarjetaProductos tarjetaProductos2">
+            <div class="tarjetaProductos tarjetaProductos2 transicion">
                 <div class="contenidoProductos">
                     <img class="imagenProducto" src="../images/sec/predator-193-fg-j-ct-ng.jpg" alt="">
                     <h4>Botines Adidas Predator 19.3</h4>
@@ -75,28 +75,28 @@
                 </div>
             </div>
 
-            <div class="tarjetaProductos tarjetaProductos3">
+            <div class="tarjetaProductos tarjetaProductos3 transicion">
                 <div class="contenidoProductos">
                     <img class="imagenProducto" src="../images/sec/5e583a6805bbd-493177-500x500.jpg" alt="">
                     <h4>Botines Adidas Predator</h4>
                     <p class="negrita">Precio: $8000</p>
                 </div>
             </div>
-            <div class="tarjetaProductos tarjetaProductos4">
+            <div class="tarjetaProductos tarjetaProductos4 transicion">
                 <div class="contenidoProductos">
                     <img class="imagenProducto" src="../images/sec/002-4092-028_zoom11-ee4f445bde22f8528415913950216278-640-0.jpg.opdownload" alt="">
                     <h4>Camiseta Boca</h4>
                     <p class="negrita">Precio: $4500</p>
                 </div>
             </div>
-            <div class="tarjetaProductos tarjetaProductos5">
+            <div class="tarjetaProductos tarjetaProductos5 transicion">
                 <div class="contenidoProductos">
                     <img src="../images/sec/Camiseta_Local_River_Plate_21-22_Blanco_GU9603_01_laydown.jpg" alt="" class="imagenProducto">
                     <h4>Camiseta River</h4>
                     <p class="negrita">Precio: $4500</p>
                 </div>
             </div>
-            <div class="tarjetaProductos tarjetaProductos6">
+            <div class="tarjetaProductos tarjetaProductos6 transicion">
                 <div class="contenidoProductos">
                     <img src="../images/sec/camisetas_w416.jpg" alt="" class="imagenProducto">
                     <h4>Camiseta PSG</h4>
