Agregue animacion de titulo y nav

--- a/assets/pages/productos.html
+++ b/assets/pages/productos.html
@@ -12,10 +12,10 @@
 
 <body id="gridAreaProductos">
     <header id="arriba" class="header">
-        <h1>Sportside | Indumentaria Deportiva</h1>
+        <h1 class="tituloAnimado">Sportside | Indumentaria Deportiva</h1>
     </header>
     <nav>
-        <ul class="hoverNav styleUl">
+        <ul class="hoverNav styleUl navAnimado">
             <li class="styleCajaLi"><a class="menu estiloTextoMenu" href="../../index.html">Inicio</a></li>
             <li class="styleCajaLi"><a class="menu estiloTextoMenu" href="./productos.html">Productos</a></li>
             <li class="styleCajaLi"><a class="menu estiloTextoMenu" href="./contacto.html">Contacto</a></li>
