--- a/assets/pages/productos.html
+++ b/assets/pages/productos.html
@@ -84,14 +84,17 @@
             </div>
             <div class="tarjetaProductos tarjetaProductos4 transicion">
                 <div class="contenidoProductos">
-                    <img class="imagenProducto" src="../images/sec/002-4092-028_zoom11-ee4f445bde22f8528415913950216278-640-0.jpg.opdownload" alt="">
+                    <img class="imagenProducto"
+                        src="../images/sec/002-4092-028_zoom11-ee4f445bde22f8528415913950216278-640-0.jpg.opdownload"
+                        alt="">
                     <h4>Camiseta Boca</h4>
                     <p class="negrita">Precio: $4500</p>
                 </div>
             </div>
             <div class="tarjetaProductos tarjetaProductos5 transicion">
                 <div class="contenidoProductos">
-                    <img src="../images/sec/Camiseta_Local_River_Plate_21-22_Blanco_GU9603_01_laydown.jpg" alt="" class="imagenProducto">
+                    <img src="../images/sec/Camiseta_Local_River_Plate_21-22_Blanco_GU9603_01_laydown.jpg" alt=""
+                        class="imagenProducto">
                     <h4>Camiseta River</h4>
                     <p class="negrita">Precio: $4500</p>
                 </div>
@@ -105,7 +108,6 @@
             </div>
         </div>
 
-    
     </main>
 
     <footer class="styleFooter">
@@ -114,11 +116,11 @@
             <p class="subrayado">Redes Sociales </p>
             <ul class="hoverFoot">
                 <li class="sinVineta"><a href="https://www.instagram.com" target="_blank"
-                            class="styleTextFooter">Instagram</a></li>
+                        class="styleTextFooter">Instagram</a></li>
                 <li class="sinVineta"><a href="https://www.facebook.com" target="_blank"
-                            class="styleTextFooter">Facebook</a></li>
+                        class="styleTextFooter">Facebook</a></li>
                 <li class="sinVineta"><a href="https://www.youtube.com" target="_blank" class="styleTextFooter">You
-                            Tube</a></li>
+                        Tube</a></li>
                 <li class="sinVineta aLaDerecha"><a href="#arriba" class="estiloTextoMenu">Ir arriba</a>
             </ul>
         </div>
